# coicop_bdf_classifier

./: .gitignore  CLAUDE.md  Dockerfile  README.md  accuracy.py  ajouts_manuels_application.csv  annotations_clean.parquet  annotations_transform.py  depenses_manuelles_carnets.csv  main.py  pyproject.toml  tickets_application.csv  topk_accuracy.py
.github/workflows/: docker-build.yml  publish-dashboard.yml
argo/: workflow.yaml
argo/secret-examples/: mlflow-credentials.yaml  s3-credentials.yaml
data/: 20260130-coicop_et_codes_techniques.csv  20260203-liste_produits_copain.csv  coicop-2018_envoi_rmes_20251022.csv  coicop_et_codes_techniques.csv  coicop_with_descriptions.csv  data-train.parquet  famille_circana.csv  table_passage_coicop.csv
data/annotated/: ajouts_manuels_application.csv  depenses_manuelles_carnets.csv  tickets_application.csv
data/text/: stopwords.json
docs/dashboard/: predictions_explorer.qmd
docs/report/: accuracy_analysis.qmd  index.qmd
scripts/: duckdb.sql  generate_train_dataset.py
src/: __init__.py  api.py  basic_classifier.py  build_training_data.py  cascade_classifier.py  classifier.py  data_generator.py  data_preparation.py  evaluation_metrics.py  evaluation_report.py  extract_ddc.py  hierarchical_classifier.py  llm_classifier.py  mlflow_model_basic.py  mlflow_model_cascade.py  mlflow_model_hierarchical.py  mlflow_model_multihead.py  mlflow_utils.py  multihead_classifier.py  predict.py  scrape_insee_coicop.py  topk_accuracy.py  train.py
tests/: test_hierarchical_pyfunc.py
website/: _quarto.yml  index.qmd
(+3 files in other folders)
