[project]
name = "coicop-bdf-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.9.0",
    "torchtextclassifiers>=1.0.3",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
    "langchain>=1.2.8",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=0.3.0",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "unidecode>=1.4.0",
    "duckdb==1.4.3",
]

[tool.uv]
index-url = "https://nexus.insee.fr/repository/pypi-proxy/simple/"

[[tool.uv.index]]
url = "https://nexus.insee.fr/repository/pypi-proxy/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://nexus.insee.fr/repository/pypi-pytorch-cpu/simple"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[dependency-groups]
torch = [
    "torch>=2.7.1",
]
